[tool.poetry]
name = "cishe"
version = "0.1.0"
description = "Client Information System for HelloEdu"
authors = ["Ace <ace.jl.han@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
arrow = "^1.0.3"
djangorestframework = "^3.12.2"
requests = "^2.25.1"
openpyxl = "^3.0.6"
django-redis = "^4.12.1"
pyyaml = "^5.4"
django-memoize = "^2.3.1"
pymysql = {version = "^1.0.2", extras = ["rsa"]}
django-environ = "^0.4.5"
django-phonenumber-field = {version = "^5.0.0", extras = ["phonenumbers"]}
djangorestframework-simplejwt = {git = "https://github.com/AtuzSolution/django-rest-framework-simplejwt", rev = "jwt_cookie"}
drf-flex-fields = "^0.8.9"
djangorestframework-filters = "1.0.0.dev2"


[tool.poetry.dev-dependencies]
# code formatter
black = "^20.8b1"
ptvsd = "^4.3.2"
pytest-django = "^4.1.0"
pytest-django-queries = "^1.2.0"
pytest-mock = "^3.5.1"
pytest-xdist = "^2.2.1"
tox = "^3.23.0"
pytest-cov = "^2.11.1"
pytest-html = "^3.1.1"
pytest-factoryboy = "^2.1.0"

# code checker
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
isort = "^5.7.0"
pre-commit = "^2.11.0"
pydocstyle = "^5.0.2"
django-stubs = "^1.5.0"
djangorestframework-stubs = "^1.2.0"
mypy = "^0.770"
codecov = "^2.1.11"

[tool.black]
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |dist
  |media
  |templates
)/
'''

[tool.isort]
known_first_party = ''
known_third_party = ["django", "environ", "factory", "phonenumber_field", "pytest", "pytest_factoryboy", "rest_flex_fields", "rest_framework", "rest_framework_simplejwt"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
